<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Menu">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/starters"
            style="@style/imageViewStyle"
            android:src="@drawable/starter"
            android:onClick="showStarters"


            />
        <ImageView
            android:id="@+id/salads"
            style="@style/imageViewStyle"
            android:src="@drawable/salads"
            android:onClick="showSalad"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="159dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"

            android:text="@string/starters"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salad"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/pizza"
            style="@style/imageViewStyle"
            android:src="@drawable/pizza"
            android:onClick="showPizza"


            />
        <ImageView
            android:id="@+id/pasta"
            style="@style/imageViewStyle"
            android:src="@drawable/pasta"
            android:onClick="showPasta"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">


        <TextView
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/Pizza"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="125dp"
            android:text="@string/pasta"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/deserts"
            style="@style/imageViewStyle"
            android:src="@drawable/deserts"
            android:onClick="showDeserts"


            />
        <ImageView
            android:id="@+id/drinks"
            style="@style/imageViewStyle"
            android:src="@drawable/drinks"
            android:onClick="showDrinks"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">


        <TextView
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/deserts"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="90dp"
            android:text="@string/drinks"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:layout_marginLeft="20dp"
        android:background="@drawable/border"
        android:onClick="confirmOrder"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>
</ScrollView>